b=366548, increased GDI usage leading to repainting problems, r/a=stuart